--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,6 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = app:app
-memory-report =true
+module = run:app
+memory-report = true
+ 2021 GitHub, Inc.
