--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,6 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = run:app
+module = app:app
 memory-report = true
- 2021 GitHub, Inc.
